--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2591,8 +2591,9 @@
 	.image {
 		border-radius: 0.25em;
 		border: 0;
-		display: inline-block;
+		display: flex;
 		position: relative;
+		justify-content: center;
 	}
 
 		.image img {
@@ -3021,7 +3022,8 @@
 
 		.spotlights > section > .image {
 			background-position: center center;
-			background-size: cover;
+			background-repeat: no-repeat;
+			background-size: contain;
 			border-radius: 0;
 			display: block;
 			position: relative;
@@ -3116,6 +3118,12 @@
 				.spotlights > section > .image {
 					width: 100%;
 					height: 50vh;
+				}
+
+				.spotlights > section > .server {
+					width: 50%;
+					height: 50vh;
+					margin: 0 auto;
 				}
 
 				.spotlights > section > .content {
